@@ -1,8 +1,8 @@
 plugins {
     id 'java'
-    id "org.sonarqube" version "3.3"
-    id 'org.springframework.boot' version "2.7.1"
-    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
+    id "org.sonarqube" version "3.5.0.2730"
+    id 'org.springframework.boot' version "2.7.5"
+    id 'io.spring.dependency-management' version "1.1.0"
 }
 
 sonarqube {
@@ -23,7 +23,7 @@ bootJar {
 
 dependencyManagement {
     imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2021.0.3'
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2021.0.5'
     }
 }
 
@@ -33,6 +33,7 @@ properties {
 
 test {
     useJUnitPlatform()
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 }
 
 repositories {
@@ -85,7 +86,6 @@ dependencies {
     implementation 'net.logstash.logback:logstash-logback-encoder:7.2'
     implementation 'ch.qos.logback:logback-classic:1.2.11'
     implementation 'org.slf4j:slf4j-api:1.7.36'
-
 
     implementation 'org.springframework.data:spring-data-commons'
 
